--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* Some kind of header tag is supposed to be here */
-1 {
+h1 {
   color: red;
 }
 
 /* You should have input here */
-someinputhere {
+input {
   border: 1px solid black;
   border-radius: 5px;
   padding: 5px;
@@ -39,31 +39,31 @@ someinputhere {
 }
 
 /* half of this class tag is in the html file already */
-.-text {
+.rainbow {
   animation: rainbow 5s linear infinite;
   -webkit-background-clip: text;
-  -webkit-animation: rainbow 5s linear infinite;
-  animation: rainbow 5s linear infinite;
+  background-clip: text;
+
 }
 
 @keyframes wave {
   0% {
-    transform: translateX(-10);
+    transform: translateX(-10px);
   }
   25% {
     transform: translateX(20px) rotate(5deg);
   }
   50% {
-    transform: translateX(10) rotate(-5deg);
+    transform: translateX(10px) rotate(-5deg);
   }
   75% {
     transform: translateX(-20px) rotate(-5deg);
   }
   90% {
-    transform: translateX(-10);
+    transform: translateX(-10px);
   }
   100% {
-    transform: translateX(-5);
+    transform: translateX(-5px);
   }
 }
 
